--- a/src/country.hbs
+++ b/src/country.hbs
@@ -1,22 +1,19 @@
 {{#each this}}
-<div>
-    <h2>
-        {{name}}
-    </h2>
-    <div>
-        <p>Capital:{{capital}}</p>
-        <p>Population:{{population}}</p>
-        <p>Languages:</p>
-        <ul>
-            
-            {{#each languages}}
-            <li>
-{{name}}
-        </li>
-        {{/each}}
-        </ul>
-        <div>
-            <img src="{{flag}}" alt="flag {{name}}">
+<div class="card">
+    <h2 class="card-title">{{name}}</h2>
+    <div class="card-box">
+        <div class="card-content">
+            <p class="card-text"><b>Capital:</b> {{capital}}</p>
+            <p class="card-text"><b>Population:</b> {{population}}</p>
+            <p class="card-text"><b>Languages:</b></p>
+            <ul class="list-group">
+                {{#each languages}}
+                <li class="list-group-item">{{name}}</li>
+                {{/each}}
+            </ul>
+        </div>
+        <div class="card-img">
+            <img src="{{flags.[0]}}" alt="flag {{name}}" width="500px">
         </div>
     </div>
 </div>
