--- a/src/country.hbs
+++ b/src/country.hbs
@@ -13,7 +13,7 @@
             </ul>
         </div>
         <div class="card-img">
-            <img src="{{flags.[0]}}" alt="flag {{name}}" width="500px">
+            <img src="{{flag}}" alt="flag {{name}}" width="500px">
         </div>
     </div>
 </div>
