--- a/src/country.hbs
+++ b/src/country.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
 <div class="card">
-    <h2 class="card-title">{{name}}</h2>
+    <h2 class="card-title">{{name.common}}</h2>
     <div class="card-box">
         <div class="card-content">
             <p class="card-text"><b>Capital:</b> {{capital}}</p>
@@ -8,12 +8,12 @@
             <p class="card-text"><b>Languages:</b></p>
             <ul class="list-group">
                 {{#each languages}}
-                <li class="list-group-item">{{name}}</li>
+                <li class="list-group-item">{{this}}</li>
                 {{/each}}
             </ul>
         </div>
         <div class="card-img">
-            <img src="{{flags.[0]}}" alt="flag {{name}}" width="500px">
+            <img src="{{flags.[0]}}" alt="flag {{name.common}}" width="500px">
         </div>
     </div>
 </div>
